crates/servicepoint_binding_c/examples/lang_c/include/servicepoint.h

/**
 * A low-level display command.
 *
 * This struct and associated functions implement the UDP protocol for the display.
 *
 * To send a `SPCommand`, use a `SPConnection`.
 *
 * # Examples
 *
 * ```C
 * sp_connection_send_command(connection, sp_command_clear());
 * sp_connection_send_command(connection, sp_command_brightness(5));
 * ```
 */
typedef struct SPCommand SPCommand;
/**
 * The raw packet
 */
typedef struct SPPacket SPPacket;
/**
 * Clones a `SPPacket`.
 *
 * Will never return NULL.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPPacket`
 * - `this` is not written to concurrently
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_packet_free`.
 */
struct SPPacket *sp_packet_clone(const struct SPPacket *this_);
/**
 * Deallocates a `SPPacket`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPPacket`
 * - `this` is not used concurrently or after this call
 */
void sp_packet_free(struct SPPacket *this_);
/**
 * Turns a `SPCommand` into a `SPPacket`.
 * The `SPCommand` gets consumed.
 *
 * Will never return NULL.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `SPCommand` points to a valid instance of `SPCommand`
 * - `SPCommand` is not used concurrently or after this call
 * - the returned `SPPacket` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_packet_free`.
 */
struct SPPacket *sp_packet_from_command(struct SPCommand *command);
/**
 * Tries to load a `SPPacket` from the passed array with the specified length.
 *
 * returns: NULL in case of an error, pointer to the allocated packet otherwise
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `data` points to a valid memory region of at least `length` bytes
 * - `data` is not written to concurrently
 * - the returned `SPPacket` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_packet_free`.
 */
struct SPPacket *sp_packet_try_load(const uint8_t *data,
                                    size_t length);